--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -364,6 +364,84 @@ header nav {
 
 @media screen and (max-width: 768px) {
 
+#name {
+	margin-left: 20px;
+}
+
+header nav {
+	position: static;
+	float: right;
+	margin-right: 20px;
+}
+
+.container {
+	width: 728px;
+	margin-left: 20px;
+	margin-right: 20px;
+}
+
+.main_about, .main_portfolio, .main_contact {
+	width: 100%;
+	margin-bottom: 30px;
+	float: none;
+}
+
+.main_about img {
+	width: 35%;
+}
+
+h3 {
+	text-align: left;
+	width: 95%;
+	margin-right: 20px;
+}
+
+.connect {
+	width: 100%;
+	margin-bottom: 100px;
+	float: none;
+	text-align: left;
+	padding-left: 20px;
+}
+
+.connect a {
+	padding-left: 5px;
+}
+
+.main_portfolio img {
+	width: 300px;
+	margin-left: 20px; 
+}
+
+.main_portfolio h4 {
+	width: 300px;
+}
+
+#p1 {
+	left: 62px;
+	top: 430px;
+}
+
+#p2 {
+	left: 401px;
+	top: 430px;
+}
+
+#p3 {
+	left: 62px;
+	top: 763px;
+}
+
+#p4 {
+	left: 401px;
+	top: 763px;
+}
+
+#p5 {
+	left: 62px;
+	top: 1096px;
+}
+
 }
 
 
