--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -297,154 +297,240 @@ footer {
 
 @media screen and (max-width: 980px) {
 
-#name {
-	margin-left: 100px;
-}
+	#name {
+		margin-left: 100px;
+	}
 
-header nav {
-	position: static;
-	float: right;
-	margin-right: 100px;
-}
+	header nav {
+		position: static;
+		float: right;
+		margin-right: 100px;
+	}
 
-.container {
-	width: 780px;
-	margin-left: 100px;
-	margin-right: 100px;
-}
+	.container {
+		width: 780px;
+		margin-left: 100px;
+		margin-right: 100px;
+	}
 
-.main_about, .main_portfolio, .main_contact {
-	width: 450px;
-	margin: none;
-	float: left;
-}
+	.main_about, .main_portfolio, .main_contact {
+		width: 450px;
+		margin: none;
+		float: left;
+	}
 
-.main_about img {
-	width: 100%;
-}
+	.main_about img {
+		width: 100%;
+	}
 
-.connect {
-	margin: none;
-	float: right;
-}
+	.connect {
+		margin: none;
+		float: right;
+	}
 
-.main_portfolio img {
-	width: 375px;
-	margin-left: 15px;
-}
+	.main_portfolio img {
+		width: 375px;
+		margin-left: 15px;
+	}
 
-.main_portfolio h4 {
-	width: 375px;
-}
+	.main_portfolio h4 {
+		width: 375px;
+	}
 
-#p1, #p2, #p3, #p4, #p5 {
-	left: 137px;
-}
+	#p1, #p2, #p3, #p4, #p5 {
+		left: 137px;
+	}
 
-#p1 {
-	top: 495px;
-}
+	#p1 {
+		top: 495px;
+	}
 
-#p2 {
-	top: 895px;
-}
+	#p2 {
+		top: 895px;
+	}
 
-#p3 {
-	top: 1295px;
-}
+	#p3 {
+		top: 1295px;
+	}
 
-#p4 {
-	top: 1695px;
-}
+	#p4 {
+		top: 1695px;
+	}
 
-#p5 {
-	top: 2095px;
-}
+	#p5 {
+		top: 2095px;
+	}
 
 
 @media screen and (max-width: 768px) {
 
-#name {
-	margin-left: 20px;
-}
+	#name {
+		margin-left: 20px;
+	}
 
-header nav {
-	position: static;
-	float: right;
-	margin-right: 20px;
-}
+	header nav {
+		position: static;
+		float: right;
+		margin-right: 20px;
+	}
 
-.container {
-	width: 728px;
-	margin-left: 20px;
-	margin-right: 20px;
-}
+	.container {
+		width: 728px;
+		margin-left: 20px;
+		margin-right: 20px;
+	}
 
-.main_about, .main_portfolio, .main_contact {
-	width: 100%;
-	margin-bottom: 30px;
-	float: none;
-}
+	.main_about, .main_portfolio, .main_contact {
+		width: 100%;
+		margin-bottom: 30px;
+		float: none;
+	}
 
-.main_about img {
-	width: 35%;
-}
+	.main_about img {
+		width: 35%;
+	}
 
-h3 {
-	text-align: left;
-	width: 95%;
-	margin-right: 20px;
-}
+	h3 {
+		text-align: left;
+		width: 95%;
+		margin-right: 20px;
+	}
 
-.connect {
-	width: 100%;
-	margin-bottom: 100px;
-	float: none;
-	text-align: left;
-	padding-left: 20px;
-}
+	.connect {
+		width: 100%;
+		margin-bottom: 100px;
+		float: none;
+		text-align: left;
+		padding-left: 20px;
+	}
 
-.connect a {
-	padding-left: 5px;
-}
+	.connect a {
+		padding-left: 5px;
+	}
 
-.main_portfolio img {
-	width: 300px;
-	margin-left: 20px; 
-}
+	.main_portfolio img {
+		width: 300px;
+		margin-left: 20px; 
+	}
 
-.main_portfolio h4 {
-	width: 300px;
-}
+	.main_portfolio h4 {
+		width: 300px;
+	}
 
-#p1 {
-	left: 62px;
-	top: 430px;
-}
+	#p1 {
+		left: 62px;
+		top: 430px;
+	}
 
-#p2 {
-	left: 401px;
-	top: 430px;
-}
+	#p2 {
+		left: 401px;
+		top: 430px;
+	}
 
-#p3 {
-	left: 62px;
-	top: 763px;
-}
+	#p3 {
+		left: 62px;
+		top: 763px;
+	}
 
-#p4 {
-	left: 401px;
-	top: 763px;
-}
+	#p4 {
+		left: 401px;
+		top: 763px;
+	}
 
-#p5 {
-	left: 62px;
-	top: 1096px;
-}
+	#p5 {
+		left: 62px;
+		top: 1096px;
+	}
 
-}
+	}
 
 
 @media screen and (max-width: 640px) {
+
+	header {
+		position: static;
+		margin: 0px;
+		height: 120px;
+	}
+
+	#name {
+		position: static;
+		float: none;
+		width: 100%;
+		margin: 0px;
+	}
+
+	header nav {
+		position: static;
+		float: none;
+		width: 100%;
+		margin: 0px;
+		text-align: center;
+	}
+
+	header nav ul {
+		margin-left: 70px;
+		float: none;
+		text-align: center;
+	}
+
+	header nav li {
+		padding-left: 60px;
+		padding-right: 60px;
+		padding-top:0px;
+		padding-bottom: 0px;
+		margin-top: 10px;
+	}
+
+	.container {
+		width: 600px;
+		margin-left: 20px;
+		margin-right: 20px;
+		margin-top: 30px;
+	}
+
+	.main_about, .main_portfolio, .main_contact {
+		width: 100%;
+		margin-right: 0px;
+	}
+
+	.main_about img {
+		width: 100%;
+		padding-left: 20px;
+		padding-right: 20px;
+	}
+
+	.main_portfolio img {
+		width: 520px;
+		margin-left: 20px;
+	}
+
+	.main_portfolio h4 {
+		width: 520px;
+	}
+
+	#p1, #p2, #p3, #p4, #p5 {
+		left: 62px;
+	}
+
+	#p1 {
+		top: 660px;
+	}
+
+	#p2 {
+		top: 1191px;
+	}
+
+	#p3 {
+		top: 1722px;
+	}
+
+	#p4 {
+		top: 2253px;
+	}
+
+	#p5 {
+		top: 2784px;
+	} 
 
 }
